# dev-infra

./: .bazelrc  .prettierignore  BUILD.bazel  CHANGELOG.md  WORKSPACE  index.bzl  package.json  test.html  tsconfig.json
.github/local-actions/branch-manager/: main.js
.github/workflows/: is-googler.yml
.ng-dev/: caretaker.mjs  config.mjs  github.mts
apps/: BUILD.bazel  firebase.json
apps/size-tracking/: BUILD.bazel  styles.scss
apps/size-tracking/app/: BUILD.bazel  app.component.html  app.component.ts
apps/size-tracking/app/compare/: BUILD.bazel  compare.component.html  compare.component.ts
apps/size-tracking/app/login/: BUILD.bazel
apps/size-tracking/app/main/: BUILD.bazel  main.component.html  main.component.ts
bazel/markdown_to_html/: BUILD.bazel  constants.ts  docs-walk-tokens.ts  hooks.ts  index.ts  markdown_to_html.ts  renderer.ts  state.ts
bazel/markdown_to_html/regions/: region-parser.ts
bazel/markdown_to_html/test/: BUILD.bazel  fake-markdown-source.md  markdown_to_html.spec.ts
bazel/markdown_to_html/tranformations/: code.ts  docs-alert.ts  docs-callout.ts  docs-card.ts  docs-code.ts  docs-decorative-header.ts  docs-pill.ts  docs-video.ts  docs-workflow.ts  h1.ts  header.ts  link.ts
bazel/size-tracking/: BUILD.bazel  index.bzl  upload.ts
docs/markdown/tutorial/: routes.ts
github-actions/: utils.ts
github-actions/app-auth-action/: package.json
github-actions/app-auth-action/lib/: bundle.js
github-actions/app-auth-action/src/: main.ts
github-actions/branch-manager/: main.js
github-actions/branch-manager/lib/: main.ts
github-actions/breaking-changes-label/: BUILD.bazel  bundle.js  main.ts
github-actions/feature-request/: BUILD.bazel  bundle.js
github-actions/is-googler/: action.yml  package.json
github-actions/is-googler/lib/: bundle.js
github-actions/is-googler/src/: main.ts
github-actions/lock-closed/: BUILD.bazel  bundle.js
github-actions/slash-commands/: main.js
ng-dev/: BUILD.bazel  package.json
ng-dev/bazel/: BUILD.bazel
ng-dev/bazel/remote-execution/: BUILD.bazel
ng-dev/benchmark/: BUILD.bazel
ng-dev/benchmark/component_benchmark/: BUILD.bazel  benchmark_test.bzl  component_benchmark.bzl
ng-dev/benchmark/driver-utilities/: BUILD.bazel
ng-dev/benchmark/ng_rollup_bundle/: ng_rollup_bundle.bzl
ng-dev/browsers/: BUILD.bazel  README.md  browser_repositories.bzl
ng-dev/browsers/chromium/: BUILD.bazel  chromium.bzl
ng-dev/browsers/firefox/: BUILD.bazel  firefox.bzl
ng-dev/caretaker/: BUILD.bazel  cli.ts
ng-dev/caretaker/config/: BUILD.bazel  config-options.ts
ng-dev/caretaker/config/get/: cli.ts  index.ts
ng-dev/caretaker/config/set/: cli.ts  index.ts
ng-dev/caretaker/handoff/: cli.ts  verify-merge-mode.ts
ng-dev/caretaker/start-release/: cli.ts
ng-dev/format/: run-commands-parallel.ts
ng-dev/format/formatters/: prettier.ts
ng-dev/misc/: cli.ts
ng-dev/misc/build-and-link/: cli.ts
ng-dev/misc/set-protection/: cli.ts
ng-dev/pr/common/test/: common.spec.ts
ng-dev/pr/common/validation/: assert-allowed-target-label.ts  assert-breaking-change-info.ts  assert-enforce-tested.ts  assert-enforced-statuses.ts  assert-isolated-separate-files.ts  validate-pull-request.ts
ng-dev/pr/discover-new-conflicts/: index.ts
ng-dev/pr/merge/: pull-request.ts
ng-dev/pr/merge/strategies/: api-merge.ts  autosquash-merge.ts  strategy.ts
ng-dev/release/: cli.ts
ng-dev/release/publish/: BUILD.bazel  actions.ts  index.ts
ng-dev/release/stamping/: env-stamp.ts
ng-dev/release/versioning/: version-branches.ts
ng-dev/utils/: BUILD.bazel  config.ts  console.ts  test.ts
ng-dev/utils/git/: authenticated-git-client.ts  github.ts
scripts/: pre-commit.sh
tools/: defaults.bzl  esbuild.bzl
tools/local-actions/changelog/: main.js
tools/local-actions/changelog/lib/: main.ts
tools/size-tracking/: index.ts
