package(default_visibility = ["//visibility:public"])

# Make source files available for distribution via pkg_npm
filegroup(
    name = "files",
    srcs = glob(["*"]) + [
        "//ng-dev/benchmark/brotli-cli:files",
        "//ng-dev/browsers:files",
        "//ng-dev/benchmark/component_benchmark:files",
        "//ng-dev/benchmark/ng_rollup_bundle:files",
    ],
)
