load("//tools:defaults.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//apps/size-tracking:__subpackages__"])

ng_module(
    name = "compare",
    srcs = glob(["*.ts"]),
    assets = [
        ":compare.component.css",
        "compare.component.html",
    ],
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/material",
        "@npm//@angular/fire",
    ],
)

sass_binary(
    name = "compare-style",
    src = "compare.component.scss",
)
